// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `""`;

exports[`2. does not render a primary image if ratio is not received 1`] = `""`;

exports[`3. does not render an inline image with no ratio and no caption or credits 1`] = `""`;

exports[`4. inline image with no ratio only shows caption and credits 1`] = `
<responsive__InsetCaptionContainerStyle>
  <div>
    <figcaption>
      <tc-view__TcView>
        <div>
          <tc-view__TcView>
            <div>
              <tc-text__TcText>
                <div>
                  Some caption
                </div>
              </tc-text__TcText>
              <tc-text__TcText
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SOME CREDIT",
                  }
                }
              >
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SOME CREDIT",
                    }
                  }
                />
              </tc-text__TcText>
            </div>
          </tc-view__TcView>
        </div>
      </tc-view__TcView>
    </figcaption>
  </div>
</responsive__InsetCaptionContainerStyle>
`;

exports[`5. image with no caption 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt={null}
              isLoaded={false}
              loading="lazy"
              src="https://img/someImage"
              zIndex={2}
            >
              <img
                alt={null}
                loading="lazy"
                src="https://img/someImage"
              />
            </responsive>
            <tc-view__TcView
              height="100%"
              width="100%"
            >
              <div
                height="100%"
                width="100%"
              >
                <svg
                  height="auto"
                  version="1.1"
                  viewBox="145 50 108 120"
                  width="100%"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <path
                      d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                      fill="#FFFFFF"
                    />
                  </g>
                </svg>
              </div>
            </tc-view__TcView>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  "",
]
`;

exports[`6. image with no display only shows given caption 1`] = `
<tc-view__TcView>
  <div>
    <tc-view__TcView>
      <div>
        <tc-view__TcView>
          <div>
            <tc-text__TcText>
              <div>
                Some caption
              </div>
            </tc-text__TcText>
          </div>
        </tc-view__TcView>
      </div>
    </tc-view__TcView>
  </div>
</tc-view__TcView>
`;

exports[`7. image with no display only shows given credits 1`] = `
<tc-view__TcView>
  <div>
    <tc-view__TcView>
      <div>
        <tc-view__TcView>
          <div>
            <tc-text__TcText
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SOME CREDIT",
                }
              }
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SOME CREDIT",
                  }
                }
              />
            </tc-text__TcText>
          </div>
        </tc-view__TcView>
      </div>
    </tc-view__TcView>
  </div>
</tc-view__TcView>
`;

exports[`8. primary image renders with caption and credits 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt="Some caption"
              isLoaded={false}
              loading="lazy"
              src="https://img/someImage"
              zIndex={2}
            >
              <img
                alt="Some caption"
                loading="lazy"
                src="https://img/someImage"
              />
            </responsive>
            <tc-view__TcView
              height="100%"
              width="100%"
            >
              <div
                height="100%"
                width="100%"
              >
                <svg
                  height="auto"
                  version="1.1"
                  viewBox="145 50 108 120"
                  width="100%"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <path
                      d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                      fill="#FFFFFF"
                    />
                  </g>
                </svg>
              </div>
            </tc-view__TcView>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  <tc-view__TcView>
    <div>
      <responsive__InsetCaptionStyle>
        <div>
          <tc-view__TcView>
            <div>
              <tc-view__TcView>
                <div>
                  <tc-text__TcText>
                    <div>
                      Some caption
                    </div>
                  </tc-text__TcText>
                  <tc-text__TcText
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDIT",
                      }
                    }
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SOME CREDIT",
                        }
                      }
                    />
                  </tc-text__TcText>
                </div>
              </tc-view__TcView>
            </div>
          </tc-view__TcView>
        </div>
      </responsive__InsetCaptionStyle>
    </div>
  </tc-view__TcView>,
]
`;

exports[`9. primary image with given resolutions 1`] = `
Array [
  <tc-view__TcView>
    <div>
      <tc-view__TcView
        testID="Image"
      >
        <div>
          <div>
            <responsive
              alt="Some caption"
              isLoaded={false}
              loading="lazy"
              src="https://img/someImage?resize=900"
              zIndex={2}
            >
              <img
                alt="Some caption"
                loading="lazy"
                src="https://img/someImage?resize=900"
              />
            </responsive>
            <responsive
              alt="Some caption"
              isLoaded={true}
              loading="lazy"
              src="https://img/someImage?resize=50"
              zIndex={1}
            >
              <img
                alt="Some caption"
                loading="lazy"
                src="https://img/someImage?resize=50"
              />
            </responsive>
            <tc-view__TcView
              height="100%"
              width="100%"
            >
              <div
                height="100%"
                width="100%"
              >
                <svg
                  height="auto"
                  version="1.1"
                  viewBox="145 50 108 120"
                  width="100%"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <path
                      d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
                      fill="#FFFFFF"
                    />
                  </g>
                </svg>
              </div>
            </tc-view__TcView>
          </div>
        </div>
      </tc-view__TcView>
    </div>
  </tc-view__TcView>,
  <tc-view__TcView>
    <div>
      <responsive__InsetCaptionStyle>
        <div>
          <tc-view__TcView>
            <div>
              <tc-view__TcView>
                <div>
                  <tc-text__TcText>
                    <div>
                      Some caption
                    </div>
                  </tc-text__TcText>
                  <tc-text__TcText
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SOME CREDIT",
                      }
                    }
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "SOME CREDIT",
                        }
                      }
                    />
                  </tc-text__TcText>
                </div>
              </tc-view__TcView>
            </div>
          </tc-view__TcView>
        </div>
      </responsive__InsetCaptionStyle>
    </div>
  </tc-view__TcView>,
]
`;
